--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^5.2.1",
+    "@rails/webpacker": "5.2.1",
     "arctic_admin": "3.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "resolutions": {
     "compression-webpack-plugin": "^4.0.0",
