Adding ActionMailer configuration via environment variables

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -5,3 +5,14 @@ AWS_ACCESS_KEY_ID:
 AWS_SECRET_ACCESS_KEY:
 S3_BUCKET_NAME:
 AWS_BUCKET_REGION:
+
+# Email sending configuration
+SMTP_ADDRESS: ''
+SMTP_PORT: ''
+SMTP_DOMAIN: ''
+SMTP_USER_NAME: ''
+SMTP_PASSWORD: ''
+SMTP_AUTHENTICATION: ''
+SMTP_ENABLE_STARTTLS_AUTO: ''
+SMTP_SSL: ''
+
