--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,43 +1,51 @@
 {
-  "active_admin.js": "/packs/js/active_admin-66dfa072cd3816551851.js",
-  "active_admin.js.map": "/packs/js/active_admin-66dfa072cd3816551851.js.map",
-  "active_admin/print.js": "/packs/js/active_admin/print-1ed3ca1eeba41a1ce8db.js",
-  "active_admin/print.js.map": "/packs/js/active_admin/print-1ed3ca1eeba41a1ce8db.js.map",
-  "application.js": "/packs/js/application-2181adcc3224cdc0c9c1.js",
-  "application.js.map": "/packs/js/application-2181adcc3224cdc0c9c1.js.map",
-  "direct_upload.js": "/packs/js/direct_upload-ecef72a22728694461d0.js",
-  "direct_upload.js.map": "/packs/js/direct_upload-ecef72a22728694461d0.js.map",
+  "active_admin.css": "/packs/css/active_admin-d909444a.css",
+  "active_admin.js": "/packs/js/active_admin-2e4ae11f72d9539dd9f4.js",
+  "active_admin.js.map": "/packs/js/active_admin-2e4ae11f72d9539dd9f4.js.map",
+  "active_admin/print.css": "/packs/css/active_admin/print-d9912d3d.css",
+  "active_admin/print.js": "/packs/js/active_admin/print-06cb8106a2b2db85feab.js",
+  "active_admin/print.js.map": "/packs/js/active_admin/print-06cb8106a2b2db85feab.js.map",
+  "application.js": "/packs/js/application-2732ea20aa2856f161af.js",
+  "application.js.map": "/packs/js/application-2732ea20aa2856f161af.js.map",
+  "direct_upload.js": "/packs/js/direct_upload-46cfe7597b07b0be13c4.js",
+  "direct_upload.js.map": "/packs/js/direct_upload-46cfe7597b07b0be13c4.js.map",
   "entrypoints": {
     "active_admin": {
+      "css": [
+        "/packs/css/active_admin-d909444a.css"
+      ],
       "js": [
-        "/packs/js/active_admin-66dfa072cd3816551851.js"
+        "/packs/js/active_admin-2e4ae11f72d9539dd9f4.js"
       ],
       "js.map": [
-        "/packs/js/active_admin-66dfa072cd3816551851.js.map"
+        "/packs/js/active_admin-2e4ae11f72d9539dd9f4.js.map"
       ]
     },
     "active_admin/print": {
+      "css": [
+        "/packs/css/active_admin/print-d9912d3d.css"
+      ],
       "js": [
-        "/packs/js/active_admin/print-1ed3ca1eeba41a1ce8db.js"
+        "/packs/js/active_admin/print-06cb8106a2b2db85feab.js"
       ],
       "js.map": [
-        "/packs/js/active_admin/print-1ed3ca1eeba41a1ce8db.js.map"
+        "/packs/js/active_admin/print-06cb8106a2b2db85feab.js.map"
       ]
     },
     "application": {
       "js": [
-        "/packs/js/application-2181adcc3224cdc0c9c1.js"
+        "/packs/js/application-2732ea20aa2856f161af.js"
       ],
       "js.map": [
-        "/packs/js/application-2181adcc3224cdc0c9c1.js.map"
+        "/packs/js/application-2732ea20aa2856f161af.js.map"
       ]
     },
     "direct_upload": {
       "js": [
-        "/packs/js/direct_upload-ecef72a22728694461d0.js"
+        "/packs/js/direct_upload-46cfe7597b07b0be13c4.js"
       ],
       "js.map": [
-        "/packs/js/direct_upload-ecef72a22728694461d0.js.map"
+        "/packs/js/direct_upload-46cfe7597b07b0be13c4.js.map"
       ]
     }
   },
